correction overflow

--- a/curtains.css
+++ b/curtains.css
@@ -14,7 +14,7 @@
 
 
 body {
-    /* margin: 0; */
+    position: absolute;
     width: 100%;
     min-height: 100vh;
     font-family: "Obrazec";
